force-app/main/default/objects/numm__valueDate__c/numm__valueDate__c.object-meta.xml
<CustomObject>
    <description>Affecte un nombre de jours de valeur pour le calcul des opérations bancaires en nombre date de valeur</description>
    <label>Date de Valeur</label>
    <nameField>
        <displayFormat>DVAL-{00000}</displayFormat>
        <label>Date de Valeur</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dates de valeur</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>