force-app/main/default/objects/numm__valueDate__c/fields/numm__RoleduTiers__c.field-meta.xml
<CustomField>
    <fullName>numm__RoleduTiers__c</fullName>
    <description>Lorsque le collectif est BAN</description>
    <inlineHelpText>Sélectionner une banque</inlineHelpText>
    <label>Role du tiers</label>
    <referenceTo>numm__ThirdPartyRule__c</referenceTo>
    <relationshipLabel>Dates de valeur</relationshipLabel>
    <relationshipName>Dates_de_valeur</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>