force-app/main/default/objects/numm__valueDate__c/fields/numm__Sens__c.field-meta.xml
<CustomField>
    <fullName>numm__Sens__c</fullName>
    <label>Sens</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Encaissement</fullName>
            </value>
            <value>
                <fullName>Décaissement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>