force-app/main/default/objects/numm__valueDate__c/fields/numm__SettleMethodCode__c.field-meta.xml
<CustomField>
    <fullName>numm__SettleMethodCode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mode de règlement</label>
    <referenceTo>numm__SettlMethod__c</referenceTo>
    <relationshipLabel>Dates de valeur</relationshipLabel>
    <relationshipName>Dates_de_valeur</relationshipName>
    <type>Lookup</type>
</CustomField>