force-app/main/default/objects/numm__valueDate__c/fields/numm__TECH_Duplicate__c.field-meta.xml
<CustomField>
    <fullName>numm__TECH_Duplicate__c</fullName>
    <label>TECH Duplicate</label>
    <length>54</length>
    <type>Text</type>
</CustomField>