force-app/main/default/objects/numm__valueDate__c/fields/numm__ValueDay__c.field-meta.xml
<CustomField>
    <fullName>numm__ValueDay__c</fullName>
    <label>Nombre de jour Date de Valeur</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>